<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@+id/outputTextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/unit_default_input"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/secondary_red" />

            <TextView
                android:id="@+id/labelTextView1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/length_cm"
                android:textAlignment="viewStart"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@+id/outputTextView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/unit_default_input"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/secondary_red" />

            <TextView
                android:id="@+id/labelTextView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/length_ft"
                android:textAlignment="viewStart"
                android:textSize="14sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="24dp">

            <TextView
                android:id="@+id/outputTextView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:padding="8dp"
                android:text="@string/unit_default_input"
                android:textAlignment="textEnd"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/secondary_red" />

            <TextView
                android:id="@+id/labelTextView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/length_in"
                android:textAlignment="viewStart"
                android:textSize="14sp" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>