<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Spinner
        android:id="@+id/unitSelectionSpinner"
        android:layout_width="0dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/unitInputEditText"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number|numberDecimal"
        android:text="@string/unit_default_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/unitSelectionSpinner"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/unit_default_input" />

    <include
        android:id="@+id/lengthInclude"
        layout="@layout/length_conversion_display"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/temperatureButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/unitInputEditText"
        app:layout_constraintTop_toBottomOf="@+id/unitInputEditText"
        app:layout_constraintVertical_bias="0.0" />

    <include
        android:id="@+id/temperatureInclude"
        layout="@layout/temperature_conversion_display"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/temperatureButton"
        app:layout_constraintEnd_toEndOf="@+id/lengthInclude"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/unitInputEditText"
        app:layout_constraintTop_toBottomOf="@+id/unitInputEditText"
        app:layout_constraintVertical_bias="0.0" />

    <include
        android:id="@+id/weightInclude"
        layout="@layout/weight_conversion_display"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/temperatureButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/unitInputEditText"
        app:layout_constraintTop_toBottomOf="@+id/unitInputEditText" />

    <Button
        android:id="@+id/lengthButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/button_length"
        android:textSize="36sp"
        android:onClick="onLengthButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lengthInclude" />

    <Button
        android:id="@+id/temperatureButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="68dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/button_temperature"
        android:textSize="36sp"
        android:onClick="onTemperatureButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/weightButton"
        app:layout_constraintStart_toEndOf="@+id/lengthButton" />

    <Button
        android:id="@+id/weightButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/button_weight"
        android:textSize="36sp"
        android:onClick="onWeightButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lengthInclude" />


</androidx.constraintlayout.widget.ConstraintLayout>